t fix for overflowing content in the x axis

--- a/scss/modules/_services.scss
+++ b/scss/modules/_services.scss
@@ -8,10 +8,11 @@ $cardColors: (
   ".card-training": $training-color
 );
 
-.services{
+.our-services{
     .container{
         margin-bottom:50px;
     }
+    overflow-x:hidden;
 }
 
 .heading{
